[package]
name = "dolos"
description = "A Cardano data-node built in Rust"
version = "0.23.0"
edition = "2021"
repository = "https://github.com/txpipe/dolos"
homepage = "https://github.com/txpipe/dolos"
documentation = "https://docs.rs/dolos"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
pallas.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true

dolos-core = { path = "crates/core" }
dolos-cardano = { path = "crates/cardano" }
dolos-minibf = { path = "crates/minibf", optional = true }

# gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
gasket = { version = "^0.9", features = ["derive"] }
# gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }

# tx3-lang = "0.4.1"
# tx3-cardano = "0.4.1"
# tx3-lang = { path = "../../tx3-lang/tx3/crates/tx3-lang" }
# tx3-cardano = { path = "../../tx3-lang/tx3/crates/tx3-cardano" }
tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }

redb = { version = "^2" }
hex = "0.4.3"
bech32 = "0.11.0"
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.18"
config = { version = "0.14.1", default-features = false, features = ["toml", "json"] }
serde_json = "1.0.122"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.17"
bincode = "1.3.3"
miette = { version = "7.4.0", features = ["fancy"] }
async-trait = "0.1.81"
bytes = "1.9.0"
futures-core = "0.3.31"
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures-util = "0.3.28"
async-stream = "0.3.5"
serde_with = "3.8.1"
protoc-wkt = "1.0.0"
itertools = "0.13.0"
indicatif = "0.17.8"
trait-variant = "0.1.2"
comfy-table = { version = "7.1.1", optional = true }
inquire = { version = "0.7.5", optional = true }
toml = { version = "0.8.13", optional = true }
console-subscriber = { version = "0.3.0", optional = true }
flate2 = "1.0.34"
tar = "0.4.41"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "rustls-tls"] }
paste = "1.0.15"


# gRPC dependencies
tonic = { version = "0.12.3", features = ["tls"], optional = true }
tonic-web = { version = "0.12.3", optional = true }
tonic-reflection = { version = "0.12.3", optional = true }

# TRP dependencies
jsonrpsee = { version = "0.24.9", features = ["server"], optional = true }

# Common HTTP dependencies
http = "1.3.1"
hyper = "1.5"
tower = "0.4"


[target.'cfg(not(windows))'.dependencies.mithril-client]
version = "0.12.2"
optional = true
default-features = false
features = ["fs", "rug-backend", "rustls-tls", "rustls-tls-webpki-roots"]

[target.'cfg(windows)'.dependencies.mithril-client]
version = "0.12.2"
optional = true
default-features = false
features = ["fs", "num-integer-backend", "rustls-tls", "rustls-tls-native-roots"]

[dev-dependencies]
tempfile = "3.20.0"

[features]
mithril = ["mithril-client"]
utils = ["comfy-table", "inquire", "toml"]
debug = ["console-subscriber", "tokio/tracing"]
phase2 = ["pallas/phase2", "dolos-core/phase2", "dolos-minibf/phase2"]

# Service features
grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
minibf = ["dolos-minibf", "tower-http/cors", "tower-http/trace"]
trp = ["jsonrpsee", "tower-http/cors"]

# Default features - includes all services
default = ["mithril", "utils", "phase2", "grpc", "minibf", "trp"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = ["crates/cardano", "crates/core", "crates/minibf"]

[workspace.dependencies]
pallas = { git = "https://github.com/txpipe/pallas.git", features = ["hardano"] }
# pallas = { version = "1.0.0-alpha.2", features = ["hardano"] }
# pallas = { path = "../pallas/pallas", features = ["hardano"] }
thiserror = "2.0.12"
tracing = "0.1.37"
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.39", default-features = false }
tokio = { version = "^1.40", features = ["rt", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }

[workspace.metadata.release]
push = false
publish = false
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]

[lints.clippy]
result_large_err = "allow"
