[package]
name = "dolos"
description = "A Cardano data-node built in Rust"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
bech32.workspace = true
bincode.workspace = true
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
pallas.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
trait-variant.workspace = true
xxhash-rust.workspace = true
axum = { version = "0.8.4", optional = true }
http-body-util = { version = "0.1.2", optional = true }
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true

dolos-core = { path = "crates/core" }
dolos-cardano = { path = "crates/cardano", features = ["include-genesis"] }
dolos-redb3 = { path = "crates/redb3" }
dolos-fjall = { path = "crates/fjall" }
dolos-minibf = { path = "crates/minibf", optional = true }
kupo = { path = "crates/kupo", optional = true }
dolos-trp = { path = "crates/trp", optional = true }

# gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }
gasket = { version = "^0.9", features = ["derive"] }
# gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }

clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.18"
config = { version = "0.15.19", default-features = false, features = [
    "toml",
    "json",
] }
lazy_static = "1.4.0"
tracing-subscriber = "0.3.17"
tracing-log = "0.2"
miette = { version = "7.6.0", features = ["fancy"] }
async-trait = "0.1.81"
bytes = "1.9.0"
async-stream = "0.3.5"
protoc-wkt = "1.0.0"
indicatif = "0.17.8"
comfy-table = { version = "7.1.1", optional = true }
inquire = { version = "0.7.5", optional = true }
toml = { version = "0.8.13", optional = true }
console-subscriber = { version = "0.3.0", optional = true }
flate2 = "1.0.34"
tar = "0.4.41"
paste = "1.0.15"
redb-extras = "0.6.1"


# gRPC dependencies
tonic = { version = "0.12.3", features = ["tls"], optional = true }
tonic-web = { version = "0.12.3", optional = true }
tonic-reflection = { version = "0.12.3", optional = true }

# Common HTTP dependencies
http = "1.3.1"
hyper = "1.5"

mithril-client = { version = "0.12.2", optional = true, default-features = false, features = [
    "fs",
    "num-integer-backend",
    "rustls-tls",
    "rustls-tls-webpki-roots",
] }

[dev-dependencies]
anyhow = "1.0"
comfy-table = "7.1.1"
csv = "1"
csv-diff = "0.1"
nix = { version = "0.30.1", features = ["signal"] }
serde = { workspace = true }
tempfile = "3.20.0"
toml = "0.8.13"
dolos-cardano = { path = "crates/cardano" }
dolos-core = { path = "crates/core" }
dolos-testing = { path = "crates/testing" }
bech32 = { workspace = true }
hex = { workspace = true }
pallas = { workspace = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[test]]
name = "smoke"
path = "tests/external/smoke.rs"

[[test]]
name = "cardano"
path = "tests/cardano/main.rs"

[[test]]
name = "epoch_pots"
path = "tests/epoch_pots/main.rs"

[features]
relaxed = ["dolos-cardano/relaxed"]
mithril = ["mithril-client"]
utils = ["comfy-table", "inquire", "toml"]
debug = ["console-subscriber", "tokio/tracing"]

# Service features
grpc = ["tonic", "tonic-web", "tonic-reflection", "tower-http/cors"]
minibf = [
    "dolos-minibf",
    "axum",
    "http-body-util",
    "tower-http/cors",
    "tower-http/trace",
    "tower-http/normalize-path",
]
kupo = [
    "dep:kupo",
    "axum",
    "http-body-util",
    "tower-http/cors",
    "tower-http/trace",
    "tower-http/normalize-path",
]
trp = ["dolos-trp"]

# Default features - includes all services
default = ["mithril", "utils", "grpc", "minibf", "kupo", "trp", "relaxed"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
members = [
    "crates/cardano",
    "crates/core",
    "crates/fjall",
    "crates/testing",
    "crates/minibf",
    "crates/redb3",
    "xtask", "crates/kupo",
]

[workspace.package]
version = "1.0.0-rc.9"
edition = "2021"
repository = "https://github.com/txpipe/dolos"
homepage = "https://github.com/txpipe/dolos"
documentation = "https://docs.rs/dolos"
license = "Apache-2.0"
readme = "README.md"
authors = ["TxPipe <hello@txpipe.io>"]

[workspace.dependencies]
# pallas = { git = "https://github.com/txpipe/pallas.git", rev = "4986428", features = ["hardano", "phase2"] }
pallas = { version = "1.0.0-alpha.4", features = ["hardano", "phase2", "unstable"] }
# pallas = { path = "../pallas/pallas", features = ["hardano", "phase2"] }

thiserror = "2.0.12"
hex = "0.4.3"
regex = "1.10.0"
tracing = "0.1.37"
itertools = "0.14.0"
bincode = "1.3.3"
futures-core = "0.3.31"
futures-util = "0.3.28"
trait-variant = "0.1.2"
serde = { version = "1.0.136", features = ["derive", "rc"] }
chrono = { version = "0.4.39", default-features = false }
tokio = { version = "^1.47", features = ["rt", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower = "0.4"
tower-http = { version = "0.6.1", features = [
    "cors",
    "trace",
    "normalize-path",
] }
serde_json = "1.0.122"
base64 = "0.22.1"
bech32 = "0.11.1"
reqwest = { version = "0.12.7", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
rayon = "1.11.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "const_xxh3"] }
num-rational = "0.4.2"
num-bigint = "0.4.6"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31"

[workspace.metadata.release]
push = false
publish = false
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]

[lints.clippy]
result_large_err = "allow"
