[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Custom build scripts and development tasks for dolos"

[[bin]]
name = "cargo-xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8.13"
xshell = "0.2"
dolos = { path = "..", default-features = false }
dolos-core = { path = "../crates/core" }
dolos-cardano = { path = "../crates/cardano", features = ["include-genesis"] }
hex = { workspace = true }
postgres = "0.19"
postgres-native-tls = "0.5"
bech32 = { workspace = true }
pallas = { workspace = true }
csv-diff = "0.1"
csv = "1"
