[package]
name = "dolos-cardano"
version.workspace = true
edition.workspace = true

[dependencies]
dolos-core = { path = "../core" }
pallas.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
hex.workspace = true
itertools.workspace = true

paste = "1.0.15"

# TODO: remove rayon once we've moved parallel processing of inputs to the core crate
rayon = "1.11.0"

serde_json = { workspace = true, optional = true }
self_cell = "1.2.0"

[dev-dependencies]
hex = "0.4.3"
itertools = "0.14.0"
serde_json = "1.0.140"

[features]
include-genesis = ["serde_json"]
