[package]
name = "dolos-cardano"
version.workspace = true
edition.workspace = true

[dependencies]
dolos-core = { path = "../core" }
pallas.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
hex.workspace = true
itertools.workspace = true
num-rational.workspace = true
num-bigint.workspace = true
async-trait = "0.1.81"
crc = "3.3.0"

paste = "1.0.15"

# TODO: remove rayon once we've moved parallel processing of inputs to the core crate
rayon = "1.11.0"

serde_json = { workspace = true }
self_cell = "1.2.0"
bech32 = { workspace = true, optional = true }
async-stream = "0.3.6"
futures-core.workspace = true


[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.140"

[features]
include-genesis = []
strict = []
