[package]
name = "dolos-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
trait-variant.workspace = true
itertools.workspace = true
tracing.workspace = true
futures-core.workspace = true
rayon.workspace = true

# TODO: we shouldn't need Pallas in core
pallas.workspace = true
hex.workspace = true
serde-big-array = "0.5.1"

[dev-dependencies]
proptest = "1.7.0"
