[package]
name = "dolos-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
trait-variant.workspace = true
itertools.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
futures-core.workspace = true
rayon.workspace = true

# TODO: we shouldn't need Tokio in core
tokio.workspace = true
tokio-stream.workspace = true

# TODO: we shouldn't need Pallas in core
pallas.workspace = true
hex.workspace = true
regex.workspace = true
serde_with = "3.16.0"

[dev-dependencies]
proptest = "1.7.0"
