[package]
name = "kupo"
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tokio.workspace = true
tower-http.workspace = true
pallas.workspace = true
hex.workspace = true
bech32.workspace = true
base58 = "0.2.0"
serde.workspace = true
serde_json.workspace = true

axum = { version = "0.8.4" }

dolos-core = { path = "../core" }
dolos-cardano = { path = "../cardano" }
