[package]
name = "dolos-minibf"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower.workspace = true
tower-http.workspace = true
itertools.workspace = true

dolos-core = { path = "../core" }
dolos-cardano = { path = "../cardano" }

axum = { version = "0.8.4", features = ["macros"] }
hex = "0.4.3"
serde_json = "1.0.140"
bech32 = "0.11.0"
blockfrost-openapi = "0.1.75"

[features]
phase2 = ["pallas/phase2"]
