[package]
name = "dolos-minibf"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower.workspace = true
tower-http.workspace = true
itertools.workspace = true

dolos-core = { path = "../core" }
dolos-cardano = { path = "../cardano" }

axum = { version = "0.8.4", features = ["macros"] }
hex = "0.4.3"
serde_json = "1.0.140"
bech32 = "0.11.0"
blockfrost-openapi = "0.1.75"
rayon = "1.10.0"
chrono.workspace = true

[features]
phase2 = ["pallas/phase2"]
