[package]
name = "dolos-minibf"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true
itertools.workspace = true
chrono.workspace = true
reqwest.workspace = true
num-rational.workspace = true
num-bigint.workspace = true

dolos-core = { path = "../core" }
dolos-cardano = { path = "../cardano" }

axum = { version = "0.8.4", features = ["macros"] }
base58 = "0.2.0"
bech32 = "0.11.0"
blockfrost-openapi = "0.1.83"
crc = "3.3.0"
futures = "0.3.31"
hex = "0.4.3"
num-traits = "0.2.19"
serde_json = "1.0.140"
futures-core.workspace = true
futures-util.workspace = true

[dev-dependencies]
dolos-testing = { path = "../testing", features = ["toy-domain"] }
http-body-util = "0.1.2"
