[package]
name = "dolos-redb"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower-http.workspace = true
itertools.workspace = true
bincode.workspace = true
hex.workspace = true
thiserror.workspace = true

dolos-core = { path = "../core" }
redb = { version = "^2.6" }

[dev-dependencies]
dolos-testing = { path = "../testing" }
