[package]
name = "dolos-redb"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower-http.workspace = true
itertools.workspace = true
bincode.workspace = true
hex.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true

dolos-core = { path = "../core" }
redb = { version = "3.0.2" }

[dev-dependencies]
dolos-testing = { path = "../testing" }
