[package]
name = "dolos-redb3"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower-http.workspace = true
itertools.workspace = true
bincode.workspace = true
hex.workspace = true
thiserror.workspace = true

dolos-core = { path = "../core", features = ["unstable"] }

redb = { version = "^2.6" }

[dev-dependencies]
dolos-testing = { path = "../testing", features = ["unstable"] }
