[package]
name = "dolos-redb3"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
pallas.workspace = true
tower-http.workspace = true
itertools.workspace = true
bincode.workspace = true
hex.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true

dolos-core = { path = "../core" }

redb = { version = "^3.1" }
redb-extras = "0.6.1"
roaring = "0.10.12"

[dev-dependencies]
dolos-testing = { path = "../testing" }

[features]
