[package]
name = "dolos-test-vectors"
version.workspace = true
edition.workspace = true

[dependencies]
bech32.workspace = true
chrono.workspace = true
itertools.workspace = true
pallas.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true

dolos-core = { path = "../core" }
dolos-cardano = { path = "../cardano" }
dolos-redb3 = { path = "../redb3" }

bb8 = "0.9.0"
bb8-postgres = "0.9.0"
clap = { version = "4.5.37", features = ["derive"] }
handlebars = "6.3.2"
miette = { version = "7.6.0", features = ["fancy"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
