[package]
name = "dolos-testing"
version.workspace = true
edition.workspace = true

[dependencies]
pallas.workspace = true
dolos-core = { path = "../core" }
rand = "0.9.1"

# optional dependencies for toy domain
dolos-redb = { path = "../redb", optional = true }
dolos-redb3 = { path = "../redb3", optional = true }
dolos-cardano = { path = "../cardano", optional = true }

tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }


[features]
default = []
toy-domain = [
    "dolos-redb",
    "dolos-redb3",
    "dolos-cardano/include-genesis",
    "tokio",
    "tokio-stream",
    "futures-core",
    "futures-util",
]
