[package]
name = "dolos-testing"
version.workspace = true
edition.workspace = true

[dependencies]
pallas.workspace = true
dolos-core = { path = "../core" }
dolos-redb3 = { path = "../redb3" }
dolos-fjall = { path = "../fjall" }
dolos-cardano = { path = "../cardano", features=["include-genesis"] }
dolos-fjall = { path = "../fjall" }
itertools.workspace = true
rand = "0.9.1"
hex = "0.4.3"
bech32 = "0.9.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
itertools.workspace = true
