[package]
name = "dolos-trp"
version = "0.1.0"
edition = "2024"

[dependencies]
base64.workspace = true
bincode.workspace = true
hex.workspace = true
itertools.workspace = true
pallas.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true

dolos-core = { path = "../core" }
dolos-cardano = { path = "../cardano" }
jsonrpsee = { version = "0.24.9", features = ["server"] }
tx3-lang = "0.6.0"
tx3-cardano = "0.6.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
# tx3-lang = { path = "../../tx3-lang/tx3/crates/tx3-lang" }
# tx3-cardano = { path = "../../tx3-lang/tx3/crates/tx3-cardano" }
# tx3-lang = { git = "https://github.com/tx3-lang/tx3.git" }
# tx3-cardano = { git = "https://github.com/tx3-lang/tx3.git" }



[dev-dependencies]
dolos-testing = { path = "../testing" }
